--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+.mymain{
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+}
+.users{
+    width: 60%;
+}
+.userDetail{
+    width: 40%;
+}
+.btn-save{
+    background-color: green;
+    color: #fff;
+    font-weight: bold;
+    padding: 5px;
+    width: 80px;
+    margin-right: 10px;
+}
+.form-footer{
+    text-align: center;
+    paddign: 10px;
+}
+.form-group{
+    padding: 10px;
+    border: 1px solid grey;
+    margin-bottom: 10px;
+}
+.form-group label{
+    display: inline-block;
+    padding:5px;
+    text-align: left;
+    width: 120px;
+}
+.form-group input{
+    width: 150px;
+    text-align: left;
+    paddign:5px;
+    border: 1px solid grey;
+}
