--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,29 +1,32 @@
+<!-- {{user | json}} -->
 <form action="">
+  <input type="hidden" name="id" [(ngModel)]="user.id">
   <div class="form-group">
     <label for="firstname"> First Name</label>
-    <input type="text" name="firstname" id="firstname">
+    <input [(ngModel)]="user.name" type="text" name="firstname" id="firstname">
   </div>
   <div class="form-group">
     <label for="lastname"> Last Name</label>
-    <input type="text" name="lastname" id="lastname">
+    <input [(ngModel)]="user.lastname" type="text" name="lastname" id="lastname">
   </div>
   <div class="form-group">
     <label for="email"> Email </label>
-    <input type="text" name="email" id="email">
+    <input [(ngModel)]="user.email" type="text" name="email" id="email">
   </div>
   <div class="form-group">
     <label for="fiscalcode"> Fiscalcode</label>
-    <input type="text" name="fiscalcode" id="fiscalcode">
+    <input [(ngModel)]="user.fiscalCode" type="text" name="fiscalcode" id="fiscalcode">
   </div>
   <div class="form-group">
     <label for="province"> Province </label>
-    <input type="text" name="province" id="province">
+    <input [(ngModel)]="user.province" type="text" name="province" id="province">
   </div>
   <div class="form-group">
     <label for="phone"> Phone </label>
-    <input type="text" name="phone" id="phone">
+    <input [(ngModel)]="user.phone" type="text" name="phone" id="phone">
   </div>
   <div class="form-group form-footer">
-    <button class="btn-save"> SAVE </button>
+    <button class="btn-save" (click)="saveUser(user)" > SAVE </button>
+    <button class="btn-save" *ngIf="closeForm" (click) = "resetForm()" > RESET </button>
   </div>
 </form> 
