--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -12,3 +12,6 @@
 <td>
   <button class="delete" (click) = "deleteUser(user)" >DELETE</button>
 </td>
+<td>
+    <button class="update" (click) = "updateUser(user)" >UPDATE</button>
+  </td>
